--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
       "require": "./dist/main/platform/nextjs.js",
       "import": "./dist/module/platform/nextjs.js"
     },
+    "./lambda": {
+      "require": "./dist/main/platform/lambda.js",
+      "import": "./dist/module/platform/lambda.js"
+    },
     "./express": {
       "require": "./dist/main/platform/express.js",
       "import": "./dist/module/platform/express.js"
@@ -66,6 +70,7 @@
   },
   "devDependencies": {
     "@jest-mock/express": "^1.4.2",
+    "@types/aws-lambda": "^8.10.79",
     "@types/cookie": "^0.4.0",
     "@types/debug": "^4.1.6",
     "@types/express": "^4.17.13",
