--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,7 @@
     // "experimentalDecorators": true /* Enables experimental support for ES7 decorators. */,
     // "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
 
-    "lib": ["es2017"],
+    "lib": ["ES2017"],
     "types": ["node", "jest"],
     "typeRoots": ["node_modules/@types", "src/types"]
   },
