--- a/tsconfig.module.json
+++ b/tsconfig.module.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig",
   "compilerOptions": {
     "outDir": "dist/module",
+    "target": "ES2020",
     "module": "ES2020"
   },
   "exclude": [
